// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingCard to match snapshot(button) 1`] = `
<DocumentFragment>
  <div
    class="mt-3 px-3 py-4 rounded setting-card bg-white"
  >
    <h1
      class="mb-0 font-weight-bold setting-card-title"
    >
      Title
    </h1>
    <p
      class="mb-0 pt-2 setting-card-description"
    >
      Description
    </p>
    <div
      class="setting-card-button"
    >
      <button
        class="btn-colored font-weight-bold btn btn-primary"
      >
        Button 1
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingCard to match snapshot(buttons) 1`] = `
<DocumentFragment>
  <div
    class="mt-3 px-3 py-4 rounded setting-card bg-white"
  >
    <div
      class="setting-card-buttons d-flex justify-content-end"
    >
      <button>
        Button 1
      </button>
      <button>
        Button 2
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SettingCard to match snapshot(default) 1`] = `
<DocumentFragment>
  <div
    class="mt-3 px-3 py-4 rounded setting-card bg-white"
  >
    <h2
      class="mb-0 font-weight-bold setting-card-title"
    >
      Title
    </h2>
    <p
      class="mb-0 pt-2 setting-card-description"
    >
      Description
    </p>
    Content
  </div>
</DocumentFragment>
`;
